@@ -26,10 +26,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -133,7 +131,10 @@ public class StudentService{
 	public JobOfferDTO applyJobOffer(Long jobOfferId, Long studentId, String coverLetter){
 		JobOffer jobOffer = jobOfferRepository.findById(jobOfferId).orElseThrow(JobOfferNotFoundException::new);
 		Student student = studentRepository.findById(studentId).orElseThrow(StudentNotFoundException::new);
+		List<Contract> contracts = contractRepository.findAllByStudentId(studentId);
 
+		if(contracts.stream().anyMatch(contract -> contract.getStudentSignature() != null))
+			throw new StudentAlreadyHasContractException();
 		if(jobOffer.hasApplied(studentId)) throw new StudentHasAlreadyAppliedException();
 		if(!student.hasApprovedCv()) throw new CvNotApprovedException();
 		if(jobOffer.getJobOfferState() != JobOfferState.OPEN) throw new JobOfferNotOpenException();
@@ -151,7 +152,7 @@ public class StudentService{
 
 	public List<JobOfferDTO> getAppliedJobOfferByStudentId(long studentId, Semester semester){
 		Student student = studentRepository.findById(studentId).orElseThrow(StudentNotFoundException::new);
-		return jobOfferRepository.findAppliedJobOffersByStudent_Id(student.getId(), semester).stream().map(JobOfferDTO::new)
+		return jobOfferRepository.findAllByJobApplications_Student_IdAndSemester(student.getId(), semester).stream().map(JobOfferDTO::new)
 		                         .collect(Collectors.toList());
 	}
 
@@ -161,12 +162,10 @@ public class StudentService{
 	}
 
 	public List<AppointmentDTO> findAllAppointmentsForJobOfferAndStudent(Long jobOfferId, Long studentId){
-
-		JobApplication jobApplication = jobApplicationRepository.findByJobOfferIdAndStudentId(jobOfferId, studentId);
-
+		JobApplication jobApplication = jobApplicationRepository.findByJobOfferIdAndStudentId(jobOfferId, studentId).orElseThrow(
+			JobApplicationNotFoundException::new);
 		List<Appointment> appointments = new ArrayList<>(jobApplication.getAppointments());
-
-		return appointments.stream().map(AppointmentDTO::new).collect(Collectors.toList());
+		return appointments.stream().map(AppointmentDTO::new).toList();
 	}
 
 	public AppointmentDTO setAppointmentToChosen(Long id){
@@ -191,6 +190,7 @@ public class StudentService{
 			(contract -> new ContractDTO(contract, manager))).toList();
 	}
 
+	@Transactional
 	public ContractDTO signContract(Long contractId, Long studentId){
 		Student student = studentRepository.findById(studentId).orElseThrow(StudentNotFoundException::new);
 		Contract contract = contractRepository.findById(contractId).orElseThrow(ContractNotFoundException::new);
@@ -206,6 +206,26 @@ public class StudentService{
 				.contract(contract)
 				.build());
 		contract.setStudentSignature(signature);
+		contractRepository.deleteAllByIdNotAndJobOfferSemester(contractId, contract.getJobOffer().getSemester());
+		jobApplicationRepository.findAllByStudentIdAndSemester(studentId, contract.getJobOffer().getSemester()).forEach(jobApplication -> {
+			if (contract.getJobOffer().getId().equals(jobApplication.getJobOffer().getId()))
+				jobApplication.setJobApplicationState(JobApplicationState.ACCEPTED);
+			else
+				jobApplication.setJobApplicationState(JobApplicationState.REJECTED);
+			jobApplicationRepository.save(jobApplication);
+		});
 		return new ContractDTO(contractRepository.save(contract), managerRepository.findFirstByDepartment(contract.getJobOffer().getDepartment()));
+	}
+
+	public JobOfferDTO markJobOfferAsViewed(Long studentId, Long jobOfferId) {
+		Student student = studentRepository.findById(studentId).orElseThrow(StudentNotFoundException::new);
+		if(student.getViewedJobOfferIds().contains(jobOfferId)) return null;
+		student.getViewedJobOfferIds().add(jobOfferId);
+		studentRepository.save(student);
+		return new JobOfferDTO(jobOfferRepository.findById(jobOfferId).orElseThrow(JobOfferNotFoundException::new));
+	}
+
+	public List<Long> getViewedJobOffersByStudentId(Long studentId) {
+		return studentRepository.findById(studentId).orElseThrow(StudentNotFoundException::new).getViewedJobOfferIds();
 	}
 }
